a bit of gnoming around
temporarily switched to a CSync fork

--- a/GnomePlushV2/GnomePlushV2.csproj
+++ b/GnomePlushV2/GnomePlushV2.csproj
@@ -55,7 +55,11 @@
 
     <!-- Secondary Package References - Libraries and APIs -->
     <ItemGroup>
-        <PackageReference Include="Owen3H.BepInEx.CSync" Version="1.*" PrivateAssets="all" />
         <PackageReference Include="Evaisa.LethalLib" Version="0.*" PrivateAssets="all" />
+    </ItemGroup>
+    <ItemGroup>
+      <Reference Include="com.sigurd.csync">
+        <HintPath>C:\Users\inoyu\AppData\Roaming\r2modmanPlus-local\LethalCompany\profiles\tests\BepInEx\plugins\Sigurd-CSync\CSync\com.sigurd.csync.dll</HintPath>
+      </Reference>
     </ItemGroup>
 </Project>
