--- a/GnomePlushV2/GnomePlushV2.csproj
+++ b/GnomePlushV2/GnomePlushV2.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <!-- BepInEx Properties -->
     <PropertyGroup>
-        <AssemblyName>GnomePlush</AssemblyName>
+        <AssemblyName>inoyu.GnomePlush</AssemblyName>
         <Product>GnomePlushV2</Product>
         <!-- Change to whatever version you're currently on. -->
-        <Version>1.0.1</Version>
+        <Version>2.0.0</Version>
     </PropertyGroup>
 
     <!-- Project Properties -->
@@ -46,6 +46,7 @@
         <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all" />
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all" />
         <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" PrivateAssets="all" />
+        <PackageReference Include="Owen3H.BepInEx.CSync" Version="2.2.4" />
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all" />
     </ItemGroup>
 
@@ -56,10 +57,5 @@
     <!-- Secondary Package References - Libraries and APIs -->
     <ItemGroup>
         <PackageReference Include="Evaisa.LethalLib" Version="0.*" PrivateAssets="all" />
-    </ItemGroup>
-    <ItemGroup>
-      <Reference Include="com.sigurd.csync">
-        <HintPath>C:\Users\inoyu\AppData\Roaming\r2modmanPlus-local\LethalCompany\profiles\tests\BepInEx\plugins\Sigurd-CSync\CSync\com.sigurd.csync.dll</HintPath>
-      </Reference>
     </ItemGroup>
 </Project>
