--- a/GnomePlushV2/GnomePlushV2.csproj
+++ b/GnomePlushV2/GnomePlushV2.csproj
@@ -46,7 +46,7 @@
         <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all" />
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all" />
         <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" PrivateAssets="all" />
-        <PackageReference Include="Owen3H.BepInEx.CSync" Version="2.2.4" />
+        <PackageReference Include="Sigurd.BepInEx.CSync" Version="5.0.1" />
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all" />
     </ItemGroup>
 
